[package]
name = "parakeet-server"
version = "0.1.0"
edition = "2021"
description = "OpenAI-compatible ASR server powered by parakeet-rs"

[[bin]]
name = "parakeet-server"
path = "src/main.rs"

[dependencies]
parakeet-rs = { version = "0.3.5", features = ["webgpu"] }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tempfile = "3"
clap = { version = "4", features = ["derive", "env"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

[dependencies.symphonia]
version = "0.5"
features = ["mp3", "aac", "flac", "ogg", "wav", "pcm", "aiff"]

# ─── GPU / Execution Provider feature pass-throughs ────────────────────────────
[features]
default   = []
cuda      = ["parakeet-rs/cuda"]
tensorrt  = ["parakeet-rs/tensorrt"]
webgpu    = ["parakeet-rs/webgpu"]
directml  = ["parakeet-rs/directml"]
